Bug #7981 SHOW GLOBAL STATUS crashes server
Submitted: 18 Jan 2005 10:25 Modified: 18 Jan 2005 14:36
Reporter: Georg Richter Email Updates:
Status: Closed Impact on me:
None 
Category:MySQL Server Severity:S3 (Non-critical)
Version:5.0.3-alpha OS:Linux (Linux SLES 8)
Assigned to: Sergei Glukhov CPU Architecture:Any

[18 Jan 2005 10:25] Georg Richter
Description:
SHOW GLOBAL STATUS command crashes server

Stacktrace:
0x818207f handle_segfault + 459
0xffffe420 _end + -140101744
(nil)
0x83c6384 safe_mutex_lock + 282
0x825fe35 mysqld_show(THD*, char const*, show_var_st*, enum_var_type, st_safe_mutex_t*, system_status_var*, st_table*) + 95
0x8264bf1 fill_status(THD*, st_table_list*, Item*) + 233
0x8265f2e get_schema_tables_result(JOIN*) + 396
0x81cb6bb JOIN::exec() + 1249
0x81cd771 _Z12mysql_selectP3THDPPP4ItemP13st_table_listjR4ListIS1_ES2_jP8st_orderSB_S2_SB_mP13select_resultP18st_select_lex_unitP13st_sel + 563
0x81c8aa4 handle_select(THD*, st_lex*, select_result*, unsigned long) + 276
0x81991c7 mysql_execute_command(THD*) + 1463
0x81a0055 mysql_parse(THD*, char*, unsigned int) + 309
0x819772a dispatch_command(enum_server_command, THD*, char*, unsigned int) + 1796
0x819701a do_command(THD*) + 556
0x81963b1 handle_one_connection + 729
0x4004c9dd _end + 933961037
0x40176ffa _end + 935183210

How to repeat:
-

Suggested fix:
r
[18 Jan 2005 14:36] Sergei Glukhov
Fixed in 5.0 source tree