Fix for bug #7981: SHOW GLOBAL STATUS crashes server